--- a/MySharePointApp/MySharePointAppWeb/Views/Home/Index.cshtml
+++ b/MySharePointApp/MySharePointAppWeb/Views/Home/Index.cshtml
@@ -4,8 +4,9 @@
 
 <div class="jumbotron">
     <h2>Welcome @ViewBag.UserName!</h2>
+    <p>Tenant Id = @ViewBag.TenantId</p>
     <p class="lead"><b>Apps for SharePoint - </b>Embracing web standards, the new cloud app model gives you maximum choice and flexibility to build a new class of apps for SharePoint using familiar languages, tools, and hosting services.</p>
-    <p><a href="http://dev.office.com" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    <p><a href="http://dev.office.com" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-4">
@@ -15,13 +16,14 @@
     </div>
     <div class="col-md-4">
         <h2>Developer training</h2>
-        <p>Learn about apps for SharePoint with this interactive course offering developer-focused how to training and walkthrough videos.</p>
+        <p>Learn about apps for SharePoint with this interactive course offering developer-focused how to training and walk-through videos.</p>
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=294441">Learn more &raquo;</a></p>
     </div>
 </div>
 
 <div class="row">
     <div class="col-md-4">
+        <h2>Project Properties</h2>
         <p>Project built on SharePoint App template</p>
         <p>Provider Hosted</p>
         <p>Debug site, our O365 Tenant</p>
